Added a few parts

--- a/GameData/OrangeSmokeOrbitals/Parts/CZ-2/OSO_CZ_2_S1Tank.cfg
+++ b/GameData/OrangeSmokeOrbitals/Parts/CZ-2/OSO_CZ_2_S1Tank.cfg
@@ -9,7 +9,7 @@ PART
 	node_attach = 1.125, 0.0, 0.0, 1.0, 0.0, 0.0, 1
 	TechRequired = highPerformanceFuelSystems
 	entryCost = 500
-	cost = 7600
+	cost = 6500
 	category = FuelTank
 	subcategory = 0
 	title = TNT-2 First Stage Tankage
@@ -69,6 +69,8 @@ PART
 			name = CZ-2D
 			transform = 2DTank
 			volumeAddedToParent = 1400
+			addedMass = 0.875
+			addedCost = 1100
 			descriptionSummary = Stretched tankage for the TNT-2D rocket
 			NODE
 			{
@@ -79,6 +81,25 @@ PART
 			{
 				name = bottom
 				position = 0.0, -6.97883, 0.0
+			}
+		}
+		SUBTYPE
+		{
+			name = 4m Shortening
+			transform = 2TankShort
+			volumeAddedToParent = -3000
+			addedMass = -1.875
+			addedCost = -2500
+			descriptionSummary = Shorter tankage based on the TNT-2 rocket series
+			NODE
+			{
+				name = top
+				position = 0.0, 3.51494, 0.0
+			}
+			NODE
+			{
+				name = bottom
+				position = 0.0, -3.51531, 0.0
 			}
 		}
 	}
@@ -93,13 +114,15 @@ PART
 			name = High Dome
 			transform = 2CTallDome
 			transform = 2DTallDome
+			transform = 2ShortTankTallDome
 		}
 		
 		SUBTYPE
 		{
 			name = Recessed Dome
-			transform = 2CRecessedTank
-			transform = 2DRecessedTank
+			transform = 2CRecessedDome
+			transform = 2DRecessedDome
+			transform = 2ShortTankRecessedDome
 		}
 	}
 }
