Added 2C Extension, probe control

--- a/GameData/OrangeSmokeOrbitals/Parts/CZ-2/OSO_CZ_2_S2Tank.cfg
+++ b/GameData/OrangeSmokeOrbitals/Parts/CZ-2/OSO_CZ_2_S2Tank.cfg
@@ -28,12 +28,67 @@ PART
 	maxTemp = 2000 // = 3000
 	fuelCrossFeed = True
 	bulkheadProfiles = size4, srf
+	vesselType = Probe
 	tags = fuel tank second stage long march cz oso
 	CoMOffset = 0.0, 0.0, 0.0
 	MODEL
 	{
 		model = OrangeSmokeOrbitals/Parts/CZ-2/OSO_CZ_2_S2Tank
 	}
+
+
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.020
+		}
+		hasHibernation = True
+	}
+
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 100
+		maxAmount = 100
+	}
+
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 0.5
+		YawTorque = 0.5
+		RollTorque = 0.5
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.03
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleSAS
+		SASServiceLevel = 3
+	}
+
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 2
+		packetResourceCost = 12.0
+		requiredResource = ElectricCharge
+		antennaPower = 5000
+		optimumRange = 2500
+		packetFloor = .1
+		packetCeiling = 5
+	}
+
 
 
 	RESOURCE
